feat: changes to design, pictures, and colors

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<li><a href="#gallery" data-id="gallery" class="scroll-link">Gallery</a></li>
 							<li><a href="#details" data-id="details" class="scroll-link">Details</a></li>
 							<li><a href="#registry" data-id="registry" class="scroll-link">Registry</a></li>
-							<li class="nav-btn"><btn data-toggle="modal" data-target="#rsvp-modal" class="btn btn-primary btn-lg">RSVP</btn></li>
+							<li class="nav-btn"><a href="https://forms.gle/KUWW2mzP1pZRCip79" target="_blank" style="all:unset"><btn class="btn btn-primary btn-lg">RSVP</btn></a></li>
 							<!-- <li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-menu-down"></span></a>
 								<ul class="dropdown-menu">
@@ -109,17 +109,21 @@
 		<!-- End Navigation -->
 
 		<!-- Begin RSVP Form -->
-		<div class="modal fade" id="rsvp-modal" tabindex="-1" role="dialog">
+		<!-- <div class="modal fade" id="rsvp-modal" tabindex="-1" role="dialog">
 		    <div class="modal-dialog">
 		        <div class="modal-content">
+				<div class="modal-header-container">
 		            <div class="modal-header">
 		                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="ion-ios-close-empty"></span>
 		                </button>
 		                <span class="pe-7s-anchor services-icon-2"></span>
 		                <h4 class="modal-title">RSVP</h4>
 					</div>
-					<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc9K_vZLCUtk2p0O4IKJ3loYKu14gx31AT9yQ9eRgDqz8uiZQ/viewform?embedded=true" width="100%" height="900px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-		            <!-- <div class="modal-body">
+				</div>
+					<div class="modal-bottom">
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc9K_vZLCUtk2p0O4IKJ3loYKu14gx31AT9yQ9eRgDqz8uiZQ/viewform?embedded=true" width="100%" height="900px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+					</div> -->
+					<!-- <div class="modal-body">
 		            	<p class="mb20">Pellentesque tincidunt tempor fermentum. Nunc vehicula ut lec tus ac commodo cibus justo. Phasellus pulvinar tellus sed dictum semper. Donec vitae sapien quis nisl gravida finibus. Aenean in condimentum nisl, hendrerit aliquet quam.</p>
 						<form data-toggle="validator" id="contactForm" name="contactForm">
 							<div class="row">
@@ -175,9 +179,9 @@
 							</div>
 						</form>
 		            </div> -->
-		        </div><!-- /.modal-content -->
-		    </div><!-- /.modal-dialog -->
-		</div><!-- /.modal -->
+		        <!-- </div>
+		    </div>
+		</div> -->
 		<!-- End RSVP Form -->
 
 	</header>
@@ -198,7 +202,7 @@
 							</h1>
 							<hr class="hr-onimage">
 							<p class="mb20">On October 5th · The Loudoun House in Lexington, Kentucky</p>
-							<button class="btn btn-lg btn-primary" data-toggle="modal" data-target="#rsvp-modal">RSVP</button>
+							<a href="https://forms.gle/KUWW2mzP1pZRCip79" target="_blank" style="all: unset"><button class="btn btn-lg btn-primary">RSVP</button></a>
 						</div>
 					</div>
 					
@@ -208,20 +212,26 @@
 				</div>
 	
 				<!-- Slideshow Images -->
+				<!-- <div class="item active">
+					<div class="fill" style="background-image:url('images/slideshow/DRP_3987_crop_40tint.jpg');"></div>
+					<div class="carousel-caption">
+						Taken: June 23rd, 2018
+					</div>
+				</div> -->
 				<div class="item active">
-					<div class="fill" style="background-image:url('images/slideshow/DRP_3987_crop.jpg');"></div>
+					<div class="fill" style="background-image:url('images/slideshow/DRP_4622_bw_crop_34tint.jpg');"></div>
 					<div class="carousel-caption">
 						Taken: June 23rd, 2018
 					</div>
 				</div>
 				<div class="item">
-					<div class="fill" style="background-image:url('images/slideshow/DRP_4622_bw_crop.jpg');"></div>
+					<div class="fill" style="background-image:url('images/slideshow/DRP_4723_crop_34tint.jpg');"></div>
 					<div class="carousel-caption">
 						Taken: June 23rd, 2018
 					</div>
 				</div>
 				<div class="item">
-					<div class="fill" style="background-image:url('images/slideshow/DRP_4723_crop.jpg');"></div>
+					<div class="fill" style="background-image:url('images/slideshow/DRP_3987_crop_40tint.jpg');"></div>
 					<div class="carousel-caption">
 						Taken: June 23rd, 2018
 					</div>
@@ -328,7 +338,7 @@
 	<!-- End Timeline -->
 
 	<!-- Begin Parallax Image -->
-	<div class="jumbotron jumbotron-page parallax-window" data-parallax="scroll" data-image-src="images/background/savethedatebackdrop_04.jpg">
+	<div class="jumbotron jumbotron-page parallax-window" data-parallax="scroll" data-image-src="images/background/savethedatebackdrop_04_20tint.jpg">
 		<div class="container center-vertically-holder">
 			<div class="center-vertically">
 				<div class="col-md-10 col-md-offset-1 text-center scaleReveal">
@@ -556,7 +566,7 @@
 				<!-- Item 1 -->
 				<div class="col-sm-4 leftReveal">
 					<h3 class="section-subtitle-2 mb10">Hilton Downtown</h3>
-					<p class="mb5">369 W Vine St., Lexington, KY 40507</p>
+					<p class="mb5">369 W Vine St, Lexington, KY 40507</p>
 					<small>
 						<em>
 							<a class="popup-gmaps underline-link" href="https://maps.google.com/maps?q=369+West+Vine+Street,+Lexington,+Kentucky&amp;hl=en&amp;t=v&amp;hnear=369+W+Vine+St,+Lexington+40507,+United+States">Open Map</a>
@@ -567,7 +577,7 @@
 				<!-- Item 2 -->
 				<div class="col-sm-4 mt30-xs bottomReveal">
 					<h3 class="section-subtitle-2 mb10">AirBnB</h3>
-					<p class="mb5">Choose your own location.</p>
+					<p class="mb5">Choose your own location and place.</p>
 					<small>
 						<em>
 							<a class="underline-link" href="https://www.airbnb.com" target="_blank">Open Website</a>
@@ -578,7 +588,7 @@
 				<!-- Item 3 -->
 				<div class="col-sm-4 mt30-xs rightReveal">
 					<h3 class="section-subtitle-2 mb10">VRBO</h3>
-					<p class="mb5">Choose your own location.</p>
+					<p class="mb5">Choose your own location and place.</p>
 					<small>
 						<em>
 							<a class="underline-link" href="https://www.vrbo.com" target="_blank">Open Website</a>
@@ -590,8 +600,58 @@
 	</section>
 	<!-- End Accommodations -->
 
+	<!-- Start Things To Do -->
+	<section id="thingstodo" class="section-padding section-border-bottom">
+		<div class="container">
+			<div class="row">
+				<!-- Title -->
+				<div class="col-sm-12">
+					<h2 class="section-title">Things To Do</h2>
+					<span class="section-divider"></span>
+					<p class="mb50">Tour a distillery on the Kentucky Bourbon Trail. Town Branch Distillery is in downtown Lexington and a few others are less than an hour away. While not on the Bourbon Trail, we also highly recommend Buffalo Trace Distillery. The tours are free and the campus is beautiful!<br><br>Take in some horses at Keeneland Race Track. October is one of the two months of the year that this historic track has live races in Lexington. See the horses on the paddock, sip on a Keeneland Breeze and bet on a race or ten!<br><br>Visit the Distillery District just outside of downtown Lexington. The Distillery District is built on the campus of the old James E Pepper Distillery is home to 3 micro-breweries, 2 micro-distilleries (including the new Pepper Distillery), Battle Axes and a number of other bars and restaurants. </p>
+				</div><!-- /.column -->
+			</div><!-- /.row -->
+
+			<div class="row">
+				<!-- Item 1 -->
+				<div class="col-sm-4 leftReveal">
+					<h3 class="section-subtitle-2 mb10">Kentucky Bourbon Trail</h3>
+					<!-- <p class="mb5">369 W Vine St., Lexington, KY 40507</p> -->
+					<small>
+						<em>
+							<a class="underline-link" href="https://kybourbontrail.com/" target="_blank">Open Website</a>
+						</em>
+					</small>
+				</div><!-- /.column -->
+
+				<!-- Item 2 -->
+				<div class="col-sm-4 mt30-xs bottomReveal">
+					<h3 class="section-subtitle-2 mb10">Keeneland Race Track</h3>
+					<!-- <p class="mb5">Choose your own location.</p> -->
+					<small>
+						<em>
+							<a class="underline-link" href="https://www.keeneland.com/" target="_blank">Open Website</a>
+						</em>
+					</small>
+				</div><!-- /.column -->
+
+				<!-- Item 3 -->
+				<div class="col-sm-4 mt30-xs rightReveal">
+					<h3 class="section-subtitle-2 mb10">The Distillery District</h3>
+					<!-- <p class="mb5">Choose your own location.</p> -->
+					<small>
+						<em>
+							<a class="underline-link" href="https://www.lexingtondistillerydistrict.com/" target="_blank">Open Website</a>
+						</em>
+					</small>
+				</div><!-- /.column -->
+			</div><!-- /.row -->
+		</div><!-- /.container -->
+	</section>
+	<!-- End Things To Do -->
+
 	<!-- Begin Our Count -->
-	<section id="ourcount" class="section-padding parallax-window" data-parallax="scroll" data-image-src="images/background/DRP_5552.jpg">
+	<section id="ourcount" class="section-padding parallax-window" data-parallax="scroll" data-image-src="images/background/DRP_5552_16tint.jpg">
 		<div class="container">
 			<div class="row scaleReveal">
 				<!-- Title -->
@@ -711,7 +771,7 @@
 					<span class="section-divider"></span>
 
 					
-					<a href="#" target="_blank"><img src="images/registry/Williams-Sonoma-logo_crop.png" class="img-responsive registry-logo rightReveal" alt="..."></a>
+					<a href="https://www.williams-sonoma.com/registry/9l6xxhtvpv/registry-list.html" target="_blank"><img src="images/registry/Williams-Sonoma-logo_crop.png" class="img-responsive registry-logo rightReveal" alt="Williams Sonoma Registry"></a>
 
 					<!-- <a href="#"><img src="images/logo-2.png" class="img-responsive registry-logo rightReveal" alt="..."></a>
 					<a href="#"><img src="images/logo-3.png" class="img-responsive registry-logo rightReveal" alt="..."></a>
