fix: link and picture change

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand scroll-link" href="#slideshow" data-id="slideshow">#LexCheerForSonyaAndShishir</a>
+						<a class="navbar-brand scroll-link" href="/" data-id="slideshow">#LexCheerForSonyaAndShishir</a>
 					</div>
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
