feat: modified content description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="author" content="Denis Samardjiev" />
-	<meta name="description" content="Married | 3 in 1 Wedding Template">
+	<meta name="description" content="Sonya and Shishir Wedding Website">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Sonya & Shishir</title>
 
