feat: new images added due to file size

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8"/>
-	<meta name="author" content="Denis Samardjiev" />
-	<meta name="description" content="Sonya and Shishir Wedding Website">
+	<meta name="author" content="Setu Biswas" />
+	<meta name="description" content="Sonya and Shishir's Wedding Website">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Sonya & Shishir</title>
 
@@ -102,19 +102,19 @@
 	
 				<!-- Slideshow Images -->
 				<div class="item active">
-					<div class="fill" style="background-image:url('images/slideshow/DRP_4622.jpg');"></div>
+					<div class="fill" style="background-image:url('images/slideshow/DRP_4622-min.jpg');"></div>
 					<div class="carousel-caption">
 						Dana Rogers Photography
 					</div>
 				</div>
 				<div class="item">
-					<div class="fill" style="background-image:url('images/slideshow/DRP_4723.jpg');"></div>
+					<div class="fill" style="background-image:url('images/slideshow/DRP_4723-min.jpg');"></div>
 					<div class="carousel-caption">
 						Dana Rogers Photography
 					</div>
 				</div>
 				<div class="item">
-					<div class="fill" style="background-image:url('images/slideshow/DRP_3987.jpg');"></div>
+					<div class="fill" style="background-image:url('images/slideshow/DRP_3987-min.jpg');"></div>
 					<div class="carousel-caption">
 						Dana Rogers Photography
 					</div>
@@ -155,7 +155,7 @@
 					<ul class="timeline timeline-pad">
 						<!-- Item 1 -->
 						<li>
-							<div class="timeline-image scaleReveal"><img alt="High School Prom picture" class="img-responsive" src="images/timeline/prom1.jpg"></div>
+							<div class="timeline-image scaleReveal"><img alt="High School Prom picture" class="img-responsive" src="images/timeline/prom1-min.jpg"></div>
 							<div class="timeline-panel leftReveal">
 								<div class="timeline-heading">
 									<h3 class="section-subtitle text-light mb15">2007 May</h3>
@@ -169,7 +169,7 @@
 
 						<!-- Item 2 -->
 						<li class="timeline-inverted">
-							<div class="timeline-image scaleReveal"><img alt="Reconnect picture" class="img-responsive" src="images/timeline/panel2.jpg"></div>
+							<div class="timeline-image scaleReveal"><img alt="Reconnect picture" class="img-responsive" src="images/timeline/panel2-min.jpg"></div>
 							<div class="timeline-panel rightReveal">
 								<div class="timeline-heading">
 									<h3 class="section-subtitle text-light mb15">2011 May</h3>
@@ -183,7 +183,7 @@
 
 						<!-- Item 3 -->
 						<li>
-							<div class="timeline-image scaleReveal"><img alt="Zoey picture" class="img-responsive" src="images/timeline/panel4.jpg"></div>
+							<div class="timeline-image scaleReveal"><img alt="Zoey picture" class="img-responsive" src="images/timeline/panel4-min.jpg"></div>
 							<div class="timeline-panel leftReveal">
 								<div class="timeline-heading">
 									<h3 class="section-subtitle text-light mb15">2017 June</h3>
@@ -197,7 +197,7 @@
 
 						<!-- Item 4 -->
 						<li class="timeline-inverted">
-							<div class="timeline-image scaleReveal"><img alt="Engaged picture" class="img-responsive" src="images/timeline/panel3.jpg"></div>
+							<div class="timeline-image scaleReveal"><img alt="Engaged picture" class="img-responsive" src="images/timeline/panel3-min.jpg"></div>
 							<div class="timeline-panel rightReveal">
 								<div class="timeline-heading">
 									<h3 class="section-subtitle text-light mb15">2018 March</h3>
@@ -217,7 +217,7 @@
 	<!-- End Timeline -->
 
 	<!-- Begin Parallax Image -->
-	<div class="jumbotron jumbotron-page parallax-window" data-parallax="scroll" data-image-src="images/background/savethedatebackdrop.jpg">
+	<div class="jumbotron jumbotron-page parallax-window" data-parallax="scroll" data-image-src="images/background/savethedatebackdrop-min.jpg">
 		<div class="container center-vertically-holder">
 			<div class="center-vertically">
 				<div class="col-md-10 col-md-offset-1 text-center scaleReveal">
@@ -226,28 +226,28 @@
 					<!-- Item 1 -->
 					<div class="col-sm-6 col-md-3 item">
 						<h2 class="h2 timer mb5 text-white" id="daystimer"></h2>
-						<p class="no-margin"><small class="text-light">Days</small></p>
+						<p class="no-margin"><small class="text-lighter">Days</small></p>
 						<span class="border-divider"></span>
 					</div>
 	
 					<!-- Item 2 -->
 					<div class="col-sm-6 col-md-3 item mt30-xs">
 						<h2 class="h2 timer mb5 text-white" id="hourstimer"></h2>
-						<p class="no-margin"><small class="text-light">Hours</small></p>
+						<p class="no-margin"><small class="text-lighter">Hours</small></p>
 						<span class="border-divider"></span>
 					</div>
 	
 					<!-- Item 3 -->
 					<div class="col-sm-6 col-md-3 item mt30-xs mt30-sm">
 						<h2 class="h2 timer mb5 text-white" id="minutestimer"></h2>
-						<p class="no-margin"><small class="text-light">Minutes</small></p>
+						<p class="no-margin"><small class="text-lighter">Minutes</small></p>
 						<span class="border-divider"></span>
 					</div>
 	
 					<!-- Item 4 -->
 					<div class="col-sm-6 col-md-3 item mt30-xs mt30-sm">
 						<h2 class="h2 timer mb5 text-white" id="secondstimer"></h2>
-						<p class="no-margin"><small class="text-light">Seconds</small></p>
+						<p class="no-margin"><small class="text-lighter">Seconds</small></p>
 						<span class="border-divider"></span>
 					</div>
 					
@@ -274,64 +274,64 @@
 			<div class="row">
 				<!-- Item 1 -->
 				<div class="col-sm-4 bottomReveal mb30">
-					<a href="images/gallery/DRP_3654.jpg" class="zoom">
-						<img src="images/gallery/DRP_3654.jpg" class="img-responsive img-rounded" alt="Gallery Photo 1">
+					<a href="images/gallery/DRP_3654-min.jpg" class="zoom">
+						<img src="images/gallery/DRP_3654-min.jpg" class="img-responsive img-rounded" alt="Gallery Photo 1">
 					</a>
 				</div>
 
 				<!-- Item 2 -->
 				<div class="col-sm-4 bottomReveal mb30">
-					<a href="images/gallery/DRP_4478.jpg" class="zoom">
-						<img src="images/gallery/DRP_4478.jpg" class="img-responsive img-rounded" alt="Gallery Photo 2">
+					<a href="images/gallery/DRP_4478-min.jpg" class="zoom">
+						<img src="images/gallery/DRP_4478-min.jpg" class="img-responsive img-rounded" alt="Gallery Photo 2">
 					</a>
 				</div>
 
 				<!-- Item 3 -->
 				<div class="col-sm-4 bottomReveal mb30">
-					<a href="images/gallery/DRP_5014.jpg" class="zoom">
-						<img src="images/gallery/DRP_5014.jpg" class="img-responsive img-rounded" alt="Gallery Photo 3">
+					<a href="images/gallery/DRP_5014-min.jpg" class="zoom">
+						<img src="images/gallery/DRP_5014-min.jpg" class="img-responsive img-rounded" alt="Gallery Photo 3">
 					</a>
 				</div>
 
 				<!-- Item 4 -->
 				<div class="col-sm-4 bottomReveal mb30">
-					<a href="images/gallery/DRP_4214.jpg" class="zoom">
-						<img src="images/gallery/DRP_4214.jpg" class="img-responsive img-rounded" alt="Gallery Photo 4">
+					<a href="images/gallery/DRP_4214-min.jpg" class="zoom">
+						<img src="images/gallery/DRP_4214-min.jpg" class="img-responsive img-rounded" alt="Gallery Photo 4">
 					</a>
 				</div>
 
 				<!-- Item 5 -->
 				<div class="col-sm-4 bottomReveal mb30">
-					<a href="images/gallery/DRP_3714.jpg" class="zoom">
-						<img src="images/gallery/DRP_3714.jpg" class="img-responsive img-rounded" alt="Gallery Photo 5">
+					<a href="images/gallery/DRP_3714-min.jpg" class="zoom">
+						<img src="images/gallery/DRP_3714-min.jpg" class="img-responsive img-rounded" alt="Gallery Photo 5">
 					</a>
 				</div>
 
 				<!-- Item 6 -->
 				<div class="col-sm-4 bottomReveal mb30">
-					<a href="images/gallery/DRP_4387.jpg" class="zoom">
-						<img src="images/gallery/DRP_4387.jpg" class="img-responsive img-rounded" alt="Gallery Photo 6">
+					<a href="images/gallery/DRP_4387-min.jpg" class="zoom">
+						<img src="images/gallery/DRP_4387-min.jpg" class="img-responsive img-rounded" alt="Gallery Photo 6">
 					</a>
 				</div>
 
 				<!-- Item 7 -->
 				<div class="col-sm-4 bottomReveal mb30-xs">
-					<a href="images/gallery/DRP_5120.jpg" class="zoom">
-						<img src="images/gallery/DRP_5120.jpg" class="img-responsive img-rounded" alt="Gallery Photo 7">
+					<a href="images/gallery/DRP_5120-min.jpg" class="zoom">
+						<img src="images/gallery/DRP_5120-min.jpg" class="img-responsive img-rounded" alt="Gallery Photo 7">
 					</a>
 				</div>
 
 				<!-- Item 8 -->
 				<div class="col-sm-4 bottomReveal mb30-xs">
-					<a href="images/gallery/DRP_5293.jpg" class="zoom">
-						<img src="images/gallery/DRP_5293.jpg" class="img-responsive img-rounded" alt="Gallery Photo 8">
+					<a href="images/gallery/DRP_5293-min.jpg" class="zoom">
+						<img src="images/gallery/DRP_5293-min.jpg" class="img-responsive img-rounded" alt="Gallery Photo 8">
 					</a>
 				</div>
 
 				<!-- Item 9 -->
 				<div class="col-sm-4 bottomReveal">
-					<a href="images/gallery/DRP_5446.jpg" class="zoom">
-						<img src="images/gallery/DRP_5446.jpg" class="img-responsive img-rounded" alt="Gallery Photo 9">
+					<a href="images/gallery/DRP_5446-min.jpg" class="zoom">
+						<img src="images/gallery/DRP_5446-min.jpg" class="img-responsive img-rounded" alt="Gallery Photo 9">
 					</a>
 				</div>
 			</div>
@@ -455,7 +455,7 @@
 				<div class="col-sm-12">
 					<h2 class="section-title">Things To Do</h2>
 					<span class="section-divider"></span>
-					<p class="mb50">Tour a distillery on the Kentucky Bourbon Trail. Town Branch Distillery is in downtown Lexington and a few others are less than an hour away. While not on the Bourbon Trail, we also highly recommend Buffalo Trace Distillery. The tours are free and the campus is beautiful!<br><br>Take in some horses at Keeneland Race Track. October is one of the two months of the year that this historic track has live races in Lexington. See the horses on the paddock, sip on a Keeneland Breeze and bet on a race or ten!<br><br>Visit the Distillery District just outside of downtown Lexington. The Distillery District is built on the campus of the old James E Pepper Distillery is home to 3 micro-breweries, 2 micro-distilleries (including the new Pepper Distillery), Battle Axes and a number of other bars and restaurants. </p>
+					<p class="mb50">Tour a distillery on the Kentucky Bourbon Trail. Town Branch Distillery is in downtown Lexington and a few others are less than an hour away. While not on the Bourbon Trail, we also highly recommend Buffalo Trace Distillery. The tours are free and the campus is beautiful!<br><br>Take in some horses at Keeneland Race Track. October is one of the two months of the year that this historic track has live races in Lexington. See the horses on the paddock, sip on a Keeneland Breeze and bet on a race or ten!<br><br>Visit the Distillery District just outside of downtown Lexington. The Distillery District is built on the campus of the old James E Pepper Distillery and is home to 3 micro-breweries, 2 micro-distilleries (including the new Pepper Distillery), Battle Axes and a number of other bars and restaurants. </p>
 				</div>
 			</div>
 
@@ -495,7 +495,7 @@
 	<!-- End Things To Do -->
 
 	<!-- Begin Our Count -->
-	<section id="ourcount" class="section-padding parallax-window" data-parallax="scroll" data-image-src="images/background/DRP_5552.jpg">
+	<section id="ourcount" class="section-padding parallax-window" data-parallax="scroll" data-image-src="images/background/DRP_5552-min.jpg">
 		<div class="container">
 			<div class="row scaleReveal">
 				<!-- Title -->
@@ -512,7 +512,7 @@
                         <i class="ion-ios-paw-outline"></i>
                     </div>
                     <h2 class="h1 timer mb5">1</h2>
-                    <p class="no-margin"><small class="text-light">Number of Furbabies</small></p>
+                    <p class="no-margin"><small class="text-lighter">Number of Furbabies</small></p>
 				</div>
 
 				<!-- Item 2 -->
@@ -521,7 +521,7 @@
                         <i class="ion-ios-calendar-outline"></i>
                     </div>
                     <h2 class="h1 timer mb5">7</h2>
-                    <p class="no-margin"><small class="text-light">Years Together</small></p>
+                    <p class="no-margin"><small class="text-lighter">Years Together</small></p>
 				</div>
 
 				<!-- Item 3 -->
@@ -530,7 +530,7 @@
                         <i class="ion-ios-home-outline"></i>
                     </div>
                     <h2 class="h1 timer mb5">4</h2>
-                    <p class="no-margin"><small class="text-light">Cities Lived</small></p>
+                    <p class="no-margin"><small class="text-lighter">Cities Lived</small></p>
 				</div>
 
 				<!-- Item 4 -->
@@ -539,7 +539,7 @@
                         <i class="ion-ios-heart-outline"></i>
                     </div>
                     <h2 class="h1 timer mb5" id="monthstimer"></h2>
-                    <p class="no-margin"><small class="text-light">Months until we Marry</small></p>
+                    <p class="no-margin"><small class="text-lighter" id="monthText"></small></p>
 				</div>
 			</div>
 		</div>
@@ -555,11 +555,11 @@
 					<span class="section-divider"></span>
 				</div>
 				<div class="col-sm-6 col-md-6 col-lg-6 col-lg-offset-0 registry-items">
-					<a href="http://www.honeyfund.com/wedding/ShishirandSonya2019" target="_blank"><img src="images/registry/honeyfund-logo.png" class="img-responsive registry-logo leftReveal" alt="HoneyFund Registry"></a>
+					<a href="http://www.honeyfund.com/wedding/ShishirandSonya2019" target="_blank"><img src="images/registry/honeyfund-logo-min.png" class="img-responsive registry-logo leftReveal" alt="HoneyFund Registry"></a>
 				</div>
 
 				<div class="col-sm-6 col-md-6 col-lg-6 col-lg-offset-0 registry-items">
-					<a href="https://www.williams-sonoma.com/registry/9l6xxhtvpv/registry-list.html" target="_blank"><img src="images/registry/Williams-Sonoma-logo.png" class="img-responsive registry-logo rightReveal" alt="Williams Sonoma Registry"></a>
+					<a href="https://www.williams-sonoma.com/registry/9l6xxhtvpv/registry-list.html" target="_blank"><img src="images/registry/Williams-Sonoma-logo-min.png" class="img-responsive registry-logo rightReveal" alt="Williams Sonoma Registry"></a>
 				</div>
 			</div>
 		</div>
