fix: removed slideshow

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand scroll-link" href="/" data-id="slideshow" alt="Lex Cheer for Sonya and Shishir">#LexCheerForSonyaAndShishir</a>
+						<a class="navbar-brand scroll-link" href="/" data-id="home" alt="Lex Cheer for Sonya and Shishir">#LexCheerForSonyaAndShishir</a>
 					</div>
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="navbar-collapse-1">
 						<ul class="nav navbar-nav navbar-right">
-							<li><a href="#slideshow" data-id="slideshow" class="scroll-link" alt="Home">Home</a></li>
+							<li><a href="#home" data-id="home" class="scroll-link" alt="Home">Home</a></li>
 							<li><a href="#story" data-id="story" class="scroll-link" alt="Story">Story</a></li>
 							<li><a href="#gallery" data-id="gallery" class="scroll-link" alt="Gallery">Gallery</a></li>
 							<li><a href="#details" data-id="details" class="scroll-link" alt="Details">Details</a></li>
@@ -76,53 +76,30 @@
 	</header>
 	<!-- End Header -->
 
-	<!-- Begin Slideshow -->
-	<div id="slideshow" class="carousel carousel-fade slide" data-ride="carousel">
-
-			<!-- Wrapper for slides -->
-			<div class="carousel-inner">
-	
-				<!-- Overlay Text -->
+	<!-- Begin Home -->
+	<div id="home" class="jumbotron jumbotron-main parallax-window" data-parallax="scroll" data-image-src="images/slideshow/DRP_4622-min.jpg">
+		<div class="container height-100">
 				<div class="overlay bottomReveal">
-					<div class="center-vertically-holder">
-						<div class="center-vertically">
-							<h1 class="header-title text-white">
-								Sonya &amp; Shishir are getting married!
-							</h1>
-							<hr class="hr-onimage">
-							<p class="mb20">On October 5th · The Loudoun House in Lexington, Kentucky</p>
-							<a href="https://forms.gle/KUWW2mzP1pZRCip79" target="_blank" style="all: unset" alt="RSVP"><button class="btn btn-lg btn-primary">RSVP</button></a>
-						</div>
-					</div>
-					
-					<div class="scroll-down">
-						<a href="#story" data-id="story" class="btn scroll-link" alt="scroll down"><span class="ion-ios-arrow-down scroll-indicator"></span></a>
+				<div class="center-vertically-holder">
+					<div class="center-vertically">
+						<h1 class="header-title text-white">
+							Sonya &amp; Shishir are getting married!
+						</h1>
+						<hr class="hr-onimage">
+						<p class="mb20">On October 5th · The Loudoun House in Lexington, Kentucky</p>
+						<a href="https://forms.gle/KUWW2mzP1pZRCip79" target="_blank" style="all: unset" alt="RSVP"><button class="btn btn-lg btn-primary">RSVP</button></a>
 					</div>
 				</div>
-	
-				<!-- Slideshow Images -->
-				<div class="item active">
-					<div class="fill" style="background-image:url('images/slideshow/DRP_4622-min.jpg');"></div>
-					<div class="carousel-caption">
-						Dana Rogers Photography
-					</div>
+				<div class="scroll-down">
+					<a href="#story" data-id="story" class="btn scroll-link" alt="scroll down"><span class="ion-ios-arrow-down scroll-indicator"></span></a>
 				</div>
-				<div class="item">
-					<div class="fill" style="background-image:url('images/slideshow/DRP_4723-min.jpg');"></div>
-					<div class="carousel-caption">
-						Dana Rogers Photography
-					</div>
-				</div>
-				<div class="item">
-					<div class="fill" style="background-image:url('images/slideshow/DRP_3987-min.jpg');"></div>
-					<div class="carousel-caption">
-						Dana Rogers Photography
-					</div>
+				<div class="carousel-caption">
+					Dana Rogers Photography
 				</div>
 			</div>
-	
+		</div>
 	</div>
-	<!-- End Slideshow -->
+	<!-- End Home -->
 
 	<!-- Start Story -->
 	<section id="story" class="section-padding">
