feat: added google verification html text

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="author" content="Setu Biswas" />
 	<meta name="description" content="Sonya and Shishir's Wedding Website">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta name="google-site-verification" content="cSObD2GhLLhCppLT6g-o1lQphoingbBYMHRdyBn7CHE" />
 	<title>Sonya & Shishir</title>
 
 	<!-- Favicon -->
